--- a/RetrofitTest/app/build.gradle
+++ b/RetrofitTest/app/build.gradle
@@ -19,10 +19,13 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.0.0-alpha1'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:0.5'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
+    api files('libs/retrofit-2.4.0.jar')
+    api files('libs/gson-2.8.0.jar')
+    api files('libs/okhttp-3.11.0.jar')
 }
