--- a/RetrofitTest/app/build.gradle
+++ b/RetrofitTest/app/build.gradle
@@ -28,4 +28,6 @@ dependencies {
     api files('libs/retrofit-2.4.0.jar')
     api files('libs/gson-2.8.0.jar')
     api files('libs/okhttp-3.11.0.jar')
+    implementation files('libs/converter-gson-2.3.0.jar')
+    implementation files('libs/logging-interceptor-3.11.0.jar')
 }
