--- a/MpAndroidChart/app/src/main/AndroidManifest.xml
+++ b/MpAndroidChart/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
 
         <activity android:name=".view.BarChartActivity" />
+        <activity android:name=".view.PieChartActivity" />
     </application>
 
 </manifest>
